--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-"token": "ODM0MTk5NjE3NTk1MTEzNDcy.GbJOdJ.-qcXcDw_YSwyymRLfn8_45EdZdlsAU8nQbwkq0",
-"id": "834199617595113472",
+"token": "NzY3NTM5ODk5MDYyNTUwNTI4.GvC6eR.jj_DmdsV6ZybqY60Xr12pcCGWvLsaJh0_Hwmdo",
+"id": "767539899062550528",
 "stats": "STREAMING",
 "text": "Kartal",
 "text2": "Kartal",
