--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "NzY3NTM5ODk5MDYyNTUwNTI4.GvC6eR.jj_DmdsV6ZybqY60Xr12pcCGWvLsaJh0_Hwmdo",
+"token": "NzY3NTM5ODk5MDYyNTUwNTI4.GvKdhG.AWwzc6WM1B6vaRSItCsLnaHjWK-CE_boN4XeNY",
 "id": "767539899062550528",
 "stats": "STREAMING",
 "text": "Kartal",
