--- a/config.json
+++ b/config.json
@@ -1,8 +1,7 @@
 {
-"token": "NzY3NTM5ODk5MDYyNTUwNTI4.GvKdhG.AWwzc6WM1B6vaRSItCsLnaHjWK-CE_boN4XeNY",
-"id": "767539899062550528",
+"id": "ic account"
 "stats": "STREAMING",
-"text": "Kartal",
-"text2": "Kartal",
-"idvc": "1071156952324898876" 
+"text": "shtek bnusa ",
+"text2": "shtek bnusa 2 ",
+"idvc": "ic vc" 
 }
